# AudioScribe

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  transcribe_audio.py
data/splits/: [O9GCn_GpVKA]-[Let's Meet Abroad].clean.txt  [O9GCn_GpVKA]-[Let's Meet Abroad].json  [O9GCn_GpVKA]-[Let's Meet Abroad].txt
src/audioscribe/: __init__.py  audio.py  config.py  main.py  pipeline.py  transcript.py  transcription.py
tests/: conftest.py  test_audio.py  test_transcript.py  test_transcription.py
