[project]
name = "AudioScribe"
version = "0.1.0"
description = "Audio transcription pipeline using OpenAI's Whisper API"
authors = [
    {name = "Captain Code", email = ""},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai==1.41.0",
    "python-dotenv==1.0.0",
    "httpx==0.25.2",
    "rich==13.7.0",
    "pydub==0.25.1",
]

[project.scripts]
audioscribe = "audioscribe.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
fix = true
line-length = 100
indent-width = 4
src = ["."]
target-version = "py313"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
unfixable = []
ignore = [
    "D203",  # one-blank-line-before-class
    "D212",  # multi-line-summary-first-line
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "T201",  # Print found
    "S101",  # Use of assert detected
    "COM812",  # Missing trailing comma
    "ISC001",  # Implicitly concatenated strings on a single line
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN001", "ANN201"]

[tool.ruff.lint.isort]
known-first-party = ["audioscribe"]

[tool.distutils.bdist_wheel]
universal = true

[tool.hatch.build.targets.wheel]
packages = ["src/audioscribe"]

[tool.pytest.ini_options]
addopts = "-v -s"
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.386",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
]
